--- a/css/components/gallery.css
+++ b/css/components/gallery.css
@@ -1,3 +1,7 @@
+.gallery {
+    user-select: none;
+}
+
 .search {
     position: relative;
     align-self: center;
